--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "micro-bot"
   },
-  "author": "",
+  "author": "Abenezer",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.26.1",
