--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.26.1",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.1",
     "micro-bot": "^2.5.3",
     "telegraf": "3.32"
   }
