--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "node",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "bot.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon bot.js"
   },
   "author": "Abenezer",
   "license": "ISC",
