--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 Token =5132220675:AAH5IB9njzIw70LeKoSM-229kNMhYQOHQzo
-HEROKU_URL=https://polar-oasis-61648.herokuapp.com/
+HEROKU_URL=https://glacial-woodland-65643.herokuapp.com/
+AppId = glacial-woodland-65643
