--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-Token = 5132220675:AAH5IB9njzIw70LeKoSM-229kNMhYQOHQzo
-HEROKU_URL = https://secret-falls-98322.herokuapp.com/
-AppId = secret-falls-98322
+Token=5132220675:AAH5IB9njzIw70LeKoSM-229kNMhYQOHQzo
+HEROKU_URL=https://secret-falls-98322.herokuapp.com/
+AppId=secret-falls-98322
+
