GUIDEDMed Initial Commit

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-Token=5132220675:AAH5IB9njzIw70LeKoSM-229kNMhYQOHQzo
+Token=6952442297:AAFn3xLiJ9hDSbtZATxZDILE6XxxbltY4BM
 HEROKU_URL=https://secret-falls-98322.herokuapp.com/
 AppId=secret-falls-98322
+APIurl=https://script.google.com/macros/s/AKfycbzfO8NTKNash0hiKw8seL84u4c6RWCVTj4x2-AK2eY-n3Rb_oPvDzAJOMdeMzBt-sFIyQ/exec
 
